# routes/index.js
@@ -1,6 +1,8 @@
 const routes = require("express").Router();
 const cars = require('./cars');
+const stores = require('./stores');
 
 routes.use('/cars', cars);
+routes.use('/stores', stores);
 
 module.exports = routes;
